# pong

./: .gitignore  CMakeLists.txt  TODO.org
cmake/: FindGLFW.cmake  FindGLM.cmake  FindSDL2.cmake
data/: bounce.lch  bounce_hit.lch  error.lch  lost_ball.lch  menu_beep.lch  menu_beep2.lch  paddle_bounce.lch
src/: .clang-format  .clang-tidy  game.cpp  game.hpp  gl.cpp  gl.hpp  input.cpp  input.hpp  main.cpp  maths.cpp  maths.hpp  maths_collisions.hpp  maths_types.hpp  maths_utils.hpp  particles.cpp  particles.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  tests.cpp  text.cpp  text.hpp  to_string.cpp  to_string.hpp
